improve test_phase_space and test_dynap notebook.

--- a/test_dynap.ipynb
+++ b/test_dynap.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:01:11.296925Z",
-     "start_time": "2020-05-29T22:01:11.294713Z"
+     "end_time": "2020-06-01T15:50:50.739358Z",
+     "start_time": "2020-06-01T15:50:50.655755Z"
     },
     "init_cell": true
    },
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:01:13.641100Z",
-     "start_time": "2020-05-29T22:01:11.298630Z"
+     "end_time": "2020-06-01T15:50:50.833939Z",
+     "start_time": "2020-06-01T15:50:50.744141Z"
     },
     "init_cell": true
    },
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:01:13.883706Z",
-     "start_time": "2020-05-29T22:01:13.644334Z"
+     "end_time": "2020-06-01T15:50:51.189358Z",
+     "start_time": "2020-06-01T15:50:50.837087Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
     "model = si.create_accelerator()\n",
-    "model.cavity_on = True\n",
+    "model.cavity_on = False\n",
     "model.radiation_on = False\n",
     "dynap = DynapXY(model)"
    ]
@@ -135,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:01:13.887604Z",
-     "start_time": "2020-05-29T22:01:13.884734Z"
+     "end_time": "2020-06-01T15:50:51.193071Z",
+     "start_time": "2020-06-01T15:50:51.190407Z"
     },
     "init_cell": true
    },
@@ -222,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:01:27.503997Z",
-     "start_time": "2020-05-29T22:01:25.270666Z"
+     "end_time": "2020-06-01T15:50:55.227265Z",
+     "start_time": "2020-06-01T15:50:53.853479Z"
     }
    },
    "outputs": [],
@@ -244,11 +244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:02:52.841817Z",
-     "start_time": "2020-05-29T22:02:52.828143Z"
+     "end_time": "2020-06-01T15:50:55.231811Z",
+     "start_time": "2020-06-01T15:50:55.228497Z"
     },
     "scrolled": false
    },
@@ -264,11 +264,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:08:25.082535Z",
-     "start_time": "2020-05-29T22:08:25.073411Z"
+     "end_time": "2020-06-01T15:50:55.342870Z",
+     "start_time": "2020-06-01T15:50:55.233003Z"
     }
    },
    "outputs": [
@@ -315,12 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T22:08:26.240848Z",
-     "start_time": "2020-05-29T22:08:26.175730Z"
-    }
+     "end_time": "2020-06-01T15:50:56.506716Z",
+     "start_time": "2020-06-01T15:50:56.383676Z"
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -344,16 +345,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T20:44:09.212928Z",
-     "start_time": "2020-05-26T20:44:09.108492Z"
+     "end_time": "2020-05-30T17:41:31.249665Z",
+     "start_time": "2020-05-30T17:41:31.101343Z"
     }
    },
    "outputs": [],
    "source": [
-    "f = dynap.make_figure_xandy_map_in_tune_plot(resons)"
+    "f, axx, ayy = dynap.make_figure_map_real2tune_planes(resons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-01T15:51:02.642523Z",
+     "start_time": "2020-06-01T15:51:02.576167Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ax.plot(dynap.x_dynap*1e3, dynap.y_dynap*1e3, '-xk')\n",
+    "# ax.plot(dynap.x_dynap[tup]*1e3, dynap.y_dynap[tup]*1e3, '-xr')\n",
+    "f.canvas.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-30T17:40:57.617882Z",
+     "start_time": "2020-05-30T17:40:57.613703Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00303448, 0.00137931, 0.00206897, 0.00303448, 0.00165517,\n",
+       "       0.00137931, 0.00234483, 0.00262069, 0.00206897, 0.00027586,\n",
+       "       0.00165517, 0.00151724, 0.00372414, 0.00344828, 0.00068966,\n",
+       "       0.00165517, 0.00358621, 0.00137931, 0.00193103, 0.00110345,\n",
+       "       0.0017931 , 0.00124138, 0.004     , 0.00206897, 0.        ,\n",
+       "       0.00041379, 0.00303448, 0.0017931 , 0.00110345, 0.00248276,\n",
+       "       0.00137931, 0.00331034, 0.00055172, 0.00317241, 0.00013793,\n",
+       "       0.00096552, 0.0017931 , 0.00248276, 0.00151724, 0.00124138,\n",
+       "       0.00344828, 0.00206897, 0.00082759, 0.00289655, 0.00275862,\n",
+       "       0.00165517, 0.00331034, 0.00193103, 0.00289655, 0.0017931 ,\n",
+       "       0.00151724, 0.00124138, 0.00358621, 0.00386207, 0.00193103,\n",
+       "       0.0022069 , 0.00317241, 0.00206897, 0.00289655])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dynap.y_dynap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-01T15:20:14.259514Z",
+     "start_time": "2020-06-01T15:20:14.251688Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x, y = dynap.y_dynap, dynap.x_dynap\n",
+    "\n",
+    "\n",
+    "r_sqr = x*x + y*y\n",
+    "theta = np.arctan2(y, x)\n",
+    "tup = np.lexsort((-theta, ))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-01T14:55:45.873314Z",
+     "start_time": "2020-06-01T14:55:45.863234Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.0, 0.0)\n",
+      "(0.0, 0.00013793103448275863)\n",
+      "(0.0, 0.00027586206896551725)\n",
+      "(0.0, 0.00041379310344827585)\n",
+      "(0.0, 0.0005517241379310345)\n",
+      "(0.0, 0.0006896551724137932)\n",
+      "(0.0, 0.0008275862068965517)\n",
+      "(0.0, 0.0009655172413793104)\n",
+      "(0.0, 0.001103448275862069)\n",
+      "(0.0, 0.0012413793103448277)\n",
+      "(0.0, 0.0013793103448275863)\n",
+      "(0.0, 0.001517241379310345)\n",
+      "(0.0, 0.0016551724137931034)\n",
+      "(0.0, 0.001793103448275862)\n",
+      "(0.0, 0.0019310344827586207)\n",
+      "(0.0, 0.0020689655172413794)\n",
+      "(0.0, 0.002206896551724138)\n",
+      "(0.0, 0.0023448275862068967)\n",
+      "(0.0, 0.0024827586206896553)\n",
+      "(0.0, 0.002620689655172414)\n",
+      "(0.0, 0.0027586206896551726)\n",
+      "(0.0, 0.0028965517241379313)\n",
+      "(0.0, 0.00303448275862069)\n",
+      "(0.0, 0.0031724137931034486)\n",
+      "(0.0, 0.003310344827586207)\n",
+      "(0.0, 0.0034482758620689655)\n",
+      "(0.0, 0.003586206896551724)\n",
+      "(0.0, 0.0037241379310344828)\n",
+      "(0.0, 0.0038620689655172414)\n",
+      "(0.0, 0.004)\n",
+      "(-0.00017391304347826042, 0.004)\n",
+      "(-0.00034782608695652084, 0.004)\n",
+      "(-0.0005217391304347813, 0.004)\n",
+      "(-0.0006956521739130434, 0.004)\n",
+      "(-0.0008695652173913038, 0.004)\n",
+      "(-0.0010434782608695643, 0.004)\n",
+      "(-0.0012173913043478264, 0.004)\n",
+      "(-0.0013913043478260868, 0.004)\n",
+      "(-0.0015652173913043473, 0.004)\n",
+      "(-0.0017391304347826077, 0.004)\n",
+      "(-0.0019130434782608698, 0.004)\n",
+      "(-0.0020869565217391303, 0.004)\n",
+      "(-0.0022608695652173907, 0.004)\n",
+      "(-0.002434782608695651, 0.004)\n",
+      "(-0.0026086956521739132, 0.004)\n",
+      "(-0.0027826086956521737, 0.004)\n",
+      "(-0.002956521739130434, 0.004)\n",
+      "(-0.0031304347826086945, 0.004)\n",
+      "(-0.0033043478260869567, 0.004)\n",
+      "(-0.003478260869565217, 0.004)\n",
+      "(-0.0036521739130434775, 0.004)\n",
+      "(-0.0038260869565217397, 0.004)\n",
+      "(-0.004, 0.004)\n",
+      "(-0.0041739130434782605, 0.004)\n",
+      "(-0.004347826086956522, 0.004)\n",
+      "(-0.004521739130434782, 0.004)\n",
+      "(-0.0046956521739130435, 0.004)\n",
+      "(-0.004869565217391304, 0.004)\n",
+      "(-0.005043478260869565, 0.004)\n",
+      "(-0.005217391304347826, 0.004)\n",
+      "(-0.005391304347826087, 0.004)\n",
+      "(-0.005565217391304347, 0.004)\n",
+      "(-0.005739130434782609, 0.004)\n",
+      "(-0.005913043478260869, 0.004)\n",
+      "(-0.00608695652173913, 0.004)\n",
+      "(-0.006260869565217391, 0.0038620689655172414)\n",
+      "(-0.006260869565217391, 0.0037241379310344828)\n",
+      "(-0.006434782608695652, 0.003586206896551724)\n",
+      "(-0.006608695652173913, 0.003586206896551724)\n",
+      "(-0.006782608695652174, 0.0034482758620689655)\n",
+      "(-0.006956521739130435, 0.003310344827586207)\n",
+      "(-0.0071304347826086955, 0.003310344827586207)\n",
+      "(-0.0071304347826086955, 0.0034482758620689655)\n",
+      "(-0.006956521739130435, 0.0031724137931034486)\n",
+      "(-0.0071304347826086955, 0.00303448275862069)\n",
+      "(-0.007304347826086957, 0.0031724137931034486)\n",
+      "(-0.007478260869565217, 0.00303448275862069)\n",
+      "(-0.0076521739130434785, 0.0028965517241379313)\n",
+      "(-0.00782608695652174, 0.0028965517241379313)\n",
+      "(-0.008, 0.00303448275862069)\n",
+      "(-0.00817391304347826, 0.0028965517241379313)\n",
+      "(-0.008, 0.0027586206896551726)\n",
+      "(-0.00817391304347826, 0.002620689655172414)\n",
+      "(-0.008347826086956521, 0.0024827586206896553)\n",
+      "(-0.008521739130434783, 0.0024827586206896553)\n",
+      "(-0.008521739130434783, 0.0023448275862068967)\n",
+      "(-0.008521739130434783, 0.002206896551724138)\n",
+      "(-0.008521739130434783, 0.0020689655172413794)\n",
+      "(-0.008695652173913044, 0.0020689655172413794)\n",
+      "(-0.008869565217391304, 0.0020689655172413794)\n",
+      "(-0.009043478260869566, 0.0020689655172413794)\n",
+      "(-0.009217391304347827, 0.0020689655172413794)\n",
+      "(-0.008869565217391304, 0.0019310344827586207)\n",
+      "(-0.008521739130434783, 0.001793103448275862)\n",
+      "(-0.008347826086956521, 0.0019310344827586207)\n",
+      "(-0.008695652173913044, 0.001793103448275862)\n",
+      "(-0.009217391304347827, 0.001793103448275862)\n",
+      "(-0.009217391304347827, 0.0019310344827586207)\n",
+      "(-0.009391304347826087, 0.0016551724137931034)\n",
+      "(-0.009565217391304347, 0.001793103448275862)\n",
+      "(-0.009739130434782608, 0.0016551724137931034)\n",
+      "(-0.00991304347826087, 0.0016551724137931034)\n",
+      "(-0.00991304347826087, 0.001517241379310345)\n",
+      "(-0.01026086956521739, 0.001517241379310345)\n",
+      "(-0.010434782608695653, 0.0016551724137931034)\n",
+      "(-0.010608695652173913, 0.001517241379310345)\n",
+      "(-0.010434782608695653, 0.0013793103448275863)\n",
+      "(-0.010782608695652174, 0.0013793103448275863)\n",
+      "(-0.010956521739130434, 0.0013793103448275863)\n",
+      "(-0.01008695652173913, 0.0013793103448275863)\n",
+      "(-0.01008695652173913, 0.0012413793103448277)\n",
+      "(-0.010434782608695653, 0.0012413793103448277)\n",
+      "(-0.01026086956521739, 0.001103448275862069)\n",
+      "(-0.010956521739130434, 0.001103448275862069)\n",
+      "(-0.010956521739130434, 0.0012413793103448277)\n",
+      "(-0.011130434782608696, 0.0009655172413793104)\n",
+      "(-0.011130434782608696, 0.0008275862068965517)\n",
+      "(-0.011130434782608696, 0.0006896551724137932)\n",
+      "(-0.011130434782608696, 0.0005517241379310345)\n",
+      "(-0.011304347826086957, 0.00041379310344827585)\n",
+      "(-0.011130434782608696, 0.00027586206896551725)\n",
+      "(-0.011304347826086957, 0.00013793103448275863)\n",
+      "(-0.00034782608695652084, 0.0)\n",
+      "(-0.00017391304347826042, 0.0)\n",
+      "(-0.0005217391304347813, 0.0)\n",
+      "(-0.0006956521739130434, 0.0)\n",
+      "(-0.0008695652173913038, 0.0)\n",
+      "(-0.0010434782608695643, 0.0)\n",
+      "(-0.0012173913043478264, 0.0)\n",
+      "(-0.0013913043478260868, 0.0)\n",
+      "(-0.0015652173913043473, 0.0)\n",
+      "(-0.0017391304347826077, 0.0)\n",
+      "(-0.0019130434782608698, 0.0)\n",
+      "(-0.0020869565217391303, 0.0)\n",
+      "(-0.0022608695652173907, 0.0)\n",
+      "(-0.002434782608695651, 0.0)\n",
+      "(-0.0026086956521739132, 0.0)\n",
+      "(-0.0027826086956521737, 0.0)\n",
+      "(-0.002956521739130434, 0.0)\n",
+      "(-0.0031304347826086945, 0.0)\n",
+      "(-0.0033043478260869567, 0.0)\n",
+      "(-0.003478260869565217, 0.0)\n",
+      "(-0.0036521739130434775, 0.0)\n",
+      "(-0.0038260869565217397, 0.0)\n",
+      "(-0.004, 0.0)\n",
+      "(-0.0041739130434782605, 0.0)\n",
+      "(-0.004347826086956522, 0.0)\n",
+      "(-0.004521739130434782, 0.0)\n",
+      "(-0.0046956521739130435, 0.0)\n",
+      "(-0.004869565217391304, 0.0)\n",
+      "(-0.005043478260869565, 0.0)\n",
+      "(-0.005217391304347826, 0.0)\n",
+      "(-0.005391304347826087, 0.0)\n",
+      "(-0.005565217391304347, 0.0)\n",
+      "(-0.005739130434782609, 0.0)\n",
+      "(-0.005913043478260869, 0.0)\n",
+      "(-0.00608695652173913, 0.0)\n",
+      "(-0.006260869565217391, 0.0)\n",
+      "(-0.006434782608695652, 0.0)\n",
+      "(-0.006608695652173913, 0.0)\n",
+      "(-0.006782608695652174, 0.0)\n",
+      "(-0.006956521739130435, 0.0)\n",
+      "(-0.0071304347826086955, 0.0)\n",
+      "(-0.007304347826086957, 0.0)\n",
+      "(-0.007478260869565217, 0.0)\n",
+      "(-0.0076521739130434785, 0.0)\n",
+      "(-0.00782608695652174, 0.0)\n",
+      "(-0.008, 0.0)\n",
+      "(-0.00817391304347826, 0.0)\n",
+      "(-0.008347826086956521, 0.0)\n",
+      "(-0.008521739130434783, 0.0)\n",
+      "(-0.008695652173913044, 0.0)\n",
+      "(-0.008869565217391304, 0.0)\n",
+      "(-0.009043478260869566, 0.0)\n",
+      "(-0.009217391304347827, 0.0)\n",
+      "(-0.009391304347826087, 0.0)\n",
+      "(-0.009565217391304347, 0.0)\n",
+      "(-0.009739130434782608, 0.0)\n",
+      "(-0.00991304347826087, 0.0)\n",
+      "(-0.01008695652173913, 0.0)\n",
+      "(-0.01026086956521739, 0.0)\n",
+      "(-0.010434782608695653, 0.0)\n",
+      "(-0.010608695652173913, 0.0)\n",
+      "(-0.010782608695652174, 0.0)\n",
+      "(-0.010956521739130434, 0.0)\n",
+      "(-0.011130434782608696, 0.0)\n",
+      "(-0.011304347826086957, 0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, y in zip(dynap.x_dynap, dynap.y_dynap):\n",
+    "    print(f'{(x,y)}')"
    ]
   },
   {
